# image_schema_llm_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
clients/: __init__.py  base_client.py  openai_client.py
notebooks/: 01_parse_quality_and_dataset_coverage.ipynb  01_parse_quality_and_dataset_coverage_with_gpt_v2.ipynb  02_schema_accuracy_abstention_and_prompt_comparison.ipynb  02_schema_accuracy_by_sentence_type_and_prompt.ipynb  02_schema_accuracy_by_sentence_type_and_prompt_with_gpt_v2.ipynb  03_tutor_response_evidence_notebook.ipynb  03_tutor_response_evidence_notebook_with_gpt_v2.ipynb  04_theory_linked_schema_and_agreement_analysis.ipynb  05_v1_v2_paired_comparison.ipynb  06_residual_control_false_positive_error_analysis.ipynb  07_schema_family_confusion_verticality.ipynb  08_provider_conservatism_comparison.ipynb  09_quantitative_statistics.ipynb
scripts/: build_rerun_keys.py  build_tutor_response_tables.py  cleanup_redundant_files.py  diagnose_parse_errors.py  dry_run_experiment.py  export_analysis_tables.py  init_runtime_config.py  inspect_abstention_metrics.py  inspect_checkpoint.py  inspect_costs.py  inspect_inputs.py  inspect_parsed_responses.py  inspect_runtime_config.py  install_abstention_prompts.py  parse_responses.py  patch_models_for_raw_quality.py  patch_prompts_for_raw_quality.py  preview_experiment_grid.py  preview_pending_jobs.py  rebuild_cost_summary.py  reset_checkpoint.py  run_claude_manifest.py  run_claude_next_job.py  run_experiment.py  run_gemini_manifest.py  run_gemini_next_job.py  run_openai_manifest.py  run_openai_next_job.py  (+5 more)
(+152 files in other folders)
